[package]
name = "wickerman"
version = "0.2.0"
authors = ["Zach Mitchell <zmitchell@fastmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
quote = "0.6"
rand = "0.6"
syn = {version = "0.15", features = ["full"]}

[lib]
proc-macro = true

[features]
default = ["just-the-bees-please"]
go-nuts = []
just-the-bees-please = []
